welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
baisseBrosse();
while (estFaceMur==false){
	avance() 
}

if (getDirection()==Direction.EST){
	gauche();
	avance();
	gaucche();
}
if (getDirection()==Direction.OUEST){
	droite();
	avance();
	droite();
}
}

